Remove occasional temp file

--- a/Preparation/Threading/Threading.csproj
+++ b/Preparation/Threading/Threading.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Examples\TaskChildExample.cs~RFa28cdaa.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
   </ItemGroup>
 
